src/FinancialForce Accounting/objects/AllocScheduleLog__c.object
<CustomObject>
    <customHelpPage>codahelpallocationscheduler</customHelpPage>
    <fields>
        <fullName>AllocScheduleRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alloc Schedule Run</label>
        <referenceTo>AllocScheduleRun__c</referenceTo>
        <relationshipLabel>Allocation Schedule Logs</relationshipLabel>
        <relationshipName>AllocationScheduleLogRuns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AllocSchedule__c</fullName>
        <label>AllocSchedule__c</label>
        <referenceTo>AllocSchedule__c</referenceTo>
        <relationshipLabel>Alloc Schedule Logs</relationshipLabel>
        <relationshipName>AllocScheduleLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsLastRun__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True if the object represents the most recent schedule execution.</description>
        <label>Is Last Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogType__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RunDate__c</fullName>
        <label>Run Date</label>
        <type>DateTime</type>
    </fields>
    <label>Alloc Schedule Log</label>
    <nameField>
        <displayFormat>AS_L-{0}</displayFormat>
        <label>Alloc Schedule Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alloc Schedule Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>